@@ -25,14 +25,16 @@ import java.util.Random;
 class AssertingLeafCollector extends FilterLeafCollector {
 
   private final Random random;
+  private final int min;
   private final int max;
 
   private Scorer scorer;
   private int lastCollected = -1;
 
-  AssertingLeafCollector(Random random, LeafCollector collector, int max) {
+  AssertingLeafCollector(Random random, LeafCollector collector, int min, int max) {
     super(collector);
     this.random = random;
+    this.min = min;
     this.max = max;
   }
 
@@ -45,6 +47,7 @@ class AssertingLeafCollector extends FilterLeafCollector {
   @Override
   public void collect(int doc) throws IOException {
     assert doc > lastCollected : "Out of order : " + lastCollected + " " + doc;
+    assert doc >= min : "Out of range: " + doc + " < " + min;
     assert doc < max : "Out of range: " + doc + " >= " + max;
     assert scorer.docID() == doc : "Collected: " + doc + " but scorer: " + scorer.docID();
     in.collect(doc);
